<resources>
    <string name="app_name">Collector</string>

    <string name="label_name">Water Billing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Gateway</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_userid">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_Search_button">Synch</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_keyword">Search</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_userid">This userID is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_Customer_id">Customer ID:</string>
    <string name="str_checkdevice">CheckDevice</string>
    <string name="str_open">open</string>
    <string name="str_close">close</string>
    <string name="str_matched">Pair</string>
    <string name="str_openimg">OpenImage</string>
    <string name="str_create2d">Create2d</string>
    <string name="str_createbar">CreateBar</string>
    <string name="str_order">SendOrder</string>
    <string name="str_scan">Scan</string>
    <string name="str_printword">PrintWords</string>
    <string name="str_printimg">PrintImage</string>
    <string name="str_disconnect">Disconnected</string>
    <string name="str_device">BlueToothDevice</string>
    <string name="str_scaning">Scaning</string>
    <string name="str_unconnected">UnConnected!</string>
    <string name="str_succonnect">Success Connected!</string>
    <string name="str_faileconnect">Failed Connected!</string>
    <string name="str_lose">Connection Lose!</string>
    <string name="str_cannotcreate2d">Can Not Create two-dimension code! </string>
    <string name="str_cannotcreatebar">Can Not Create Barcode</string>
    <string name="str_devecehasblue">This device has a bluetooth device!</string>
    <string name="str_nomatched">No matching equipment!</string>
    <string name="str_connected">Bluetooth Connected</string>
    <string name="str_disconnected">Bluetooth Not Connected</string>
    <string name="str_connecting">Bluetooth Connecting</string>
    <string name="str_hasnodevice">No bluetooth device!</string>
    <string name="str_scanover">Scanning Complete!</string>
    <string name="chose">Chose</string>
    <string name="action_Setting">Settings</string>
    <string name="btn_Print">Print</string>
    <string name="btn_Capture">Capture</string>
    <string name="btn_Save">Save</string>

    <string name="str_profile"></string>
</resources>
