<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.watersystem.app.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">


                <Button
                    android:id="@+id/bt_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/str_checkdevice" />

                <Button
                    android:id="@+id/bt_openclose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/str_open" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/bt_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/str_printimg" />


                <Button
                    android:id="@+id/bt_disconnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/str_disconnect" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/bt_openpci"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/str_openimg" />

                <Button
                    android:id="@+id/bt_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/str_order" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/bt_2d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/str_create2d" />

                <Button
                    android:id="@+id/bt_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/str_createbar" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/bt_scan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/str_scan" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/bt_print"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/str_printword"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bt_matches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/str_matched"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/seach_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight=".50"
                    android:text="@string/action_Search_button"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@android:color/darker_gray"
                android:gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:text="@string/str_device" />

                <LinearLayout
                    android:id="@+id/layoutscan"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/str_scaning" />

                    <ProgressBar
                        android:id="@+id/progressBar2"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/lv_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left" />
        </LinearLayout>

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_keywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:hint="@string/prompt_keyword"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <Spinner
                android:id="@+id/filter_Type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".70" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listview_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/mobile_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
